# proofmarket

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  PROGRAM_DESIGN.md  README.md  RUNBOOK_day1.md  demo-fixtures.json  package-lock.json  package.json  tsconfig.json
app/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
app/api/: health.js  health.ts
app/api/txline/: [...path].ts  proxyCore.ts
app/api/txline/scores/: stat-validation.js  stat-validation.ts
app/src/: App.tsx  ErrorBoundary.tsx  MarketPage.tsx  anchorUtils.ts  config.ts  demoAuthority.ts  demoConfig.ts  demoUsdc.ts  main.tsx  pdas.ts  safeRpc.ts  styles.css  txline.ts
app/src/idl/: proofmarket.json  proofmarket.ts
docs/: TECHNICAL.md
idl/: README.md
programs/proofmarket/: Cargo.toml
programs/proofmarket/src/: lib.rs
scripts/: fund_demo_wallets.ts  gen-idl.js  pick_fixture.ts  setup_demo.ts  wsl-anchor-build.sh
src/: derisk_validate_stat.ts  diagnose.ts  gen_wallet.ts  pdas.ts  subscribe_activate.ts  txline.ts  validate-stat.ts
tests/: smoke_lifecycle.ts  smoke_two_stat.ts
